修改目录结构

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,93 +9,11 @@
   },
   "router": {
     "widgets": {
-      "button": {
-        "name": "按钮",
-        "description": "按钮类组件示例",
+      "voice-list-a": {
+        "name": "jovi语音",
+        "description": "Jovi语音模板A",
         "component": "index",
-        "path": "/button",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": [
-            "poiListUrl",
-            "poiListData"
-          ]
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "container": {
-        "name": "普通容器",
-        "description": "普通容器组件示例",
-        "component": "index",
-        "path": "/container",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": [
-            "poiListUrl",
-            "poiListData"
-          ]
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "textarea": {
-        "name": "多文本组件",
-        "description": "多文本组件示例",
-        "component": "index",
-        "path": "/textarea",
+        "path": "/voice/list-a",
         "features": [
           {
             "name": "system.router"
