complete voice/list-c

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,6 +47,196 @@
           "vivo"
         ]
       },
+      "voice/card-list-b": {
+        "name": "jovi语音/card-list-b",
+        "description": "jovi语音左图右文列表模板B",
+        "component": "index",
+        "path": "/voice/card-list-b",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
+      "voice/card-list-c": {
+        "name": "jovi语音/card-list-c",
+        "description": "左图右文",
+        "component": "index",
+        "path": "/voice/card-list-c",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
+      "voice/card-list-d": {
+        "name": "jovi语音/card-list-d",
+        "description": "jovi语音文字列表模板D",
+        "component": "index",
+        "path": "/voice/card-list-d",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
+      "voice/card-template-a": {
+        "name": "jovi语音/card-template-a",
+        "description": "jovi语音纯文本卡片模板A",
+        "component": "index",
+        "path": "/voice/card-template-a",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
+      "voice/card-template-b": {
+        "name": "jovi语音/card-template-b",
+        "description": "jovi语音左图右文(播放器)卡片模板B",
+        "component": "index",
+        "path": "/voice/card-template-b",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
       "screen/card-template-a": {
         "name": "智慧识屏/card-template-a",
         "description": "智慧识屏卡片图文模板A",
@@ -123,158 +313,6 @@
             "poiListUrl",
             "poiListData"
           ]
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "voice/card-template-a": {
-        "name": "jovi语音/card-template-a",
-        "description": "jovi语音纯文本卡片模板A",
-        "component": "index",
-        "path": "/voice/card-template-a",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": []
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "voice/card-list-d": {
-        "name": "jovi语音/card-list-d",
-        "description": "jovi语音文字列表模板D",
-        "component": "index",
-        "path": "/voice/card-list-d",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": []
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "voice/card-template-b": {
-        "name": "jovi语音/card-template-b",
-        "description": "jovi语音左图右文(播放器)卡片模板B",
-        "component": "index",
-        "path": "/voice/card-template-b",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": []
-        },
-        "minPlatformVersion": 1050,
-        "targetManufactorys": [
-          "vivo"
-        ]
-      },
-      "voice/card-list-b": {
-        "name": "jovi语音/card-list-b",
-        "description": "jovi语音左图右文列表模板B",
-        "component": "index",
-        "path": "/voice/card-list-b",
-        "features": [
-          {
-            "name": "system.router"
-          },
-          {
-            "name": "system.hostconnection"
-          },
-          {
-            "name": "system.fetch"
-          },
-          {
-            "name":"system.network"
-          },
-          {
-            "name":"system.storage"
-          }
-        ],
-        "params": {
-          "title": "noTitle",
-          "height": "20%",
-          "enableFold": "false",
-          "refreshDuration":3,
-          "refreshDurationInWifi":3,
-          "cardType": 5,
-          "distributeType": 2,
-          "service_id": "",
-          "param_keys": []
         },
         "minPlatformVersion": 1050,
         "targetManufactorys": [
