完成card-template-b模板

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -87,6 +87,47 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "screen/card-template-b": {
+        "name": "智慧识屏/card-template-b",
+        "description": "智慧识屏卡片纯文字模板B",
+        "component": "index",
+        "path": "/screen/card-template-b",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": [
+            "poiListUrl",
+            "poiListData"
+          ]
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
