--- a/src/manifest.json
+++ b/src/manifest.json
@@ -204,6 +204,44 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "voice/card-template-b": {
+        "name": "jovi语音/card-template-b",
+        "description": "jovi语音左图右文(播放器)卡片模板B",
+        "component": "index",
+        "path": "/voice/card-template-b",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
