complate voice/list-d

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -166,6 +166,44 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "voice/card-list-d": {
+        "name": "jovi语音/card-list-d",
+        "description": "jovi语音文字列表模板D",
+        "component": "index",
+        "path": "/voice/card-list-d",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
