完成智慧桌面card-template-d

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -368,6 +368,47 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "desktop/card-template-d": {
+        "name": "智慧桌面（负一屏）/card-template-d",
+        "description": "智慧桌面综合卡片模板",
+        "component": "index",
+        "path": "/desktop/card-template-d",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": [
+            "poiListUrl",
+            "poiListData"
+          ]
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
