complete search/button

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -450,6 +450,44 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "search/component-button": {
+        "name": "全局搜索/component-button",
+        "description": "全局搜索按钮组件",
+        "component": "index",
+        "path": "/search/component-button",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
