--- a/src/manifest.json
+++ b/src/manifest.json
@@ -982,6 +982,44 @@
         "targetManufactorys": [
           "vivo"
         ]
+      },
+      "jovi/component-textarea": {
+        "name": "Jovi/component-textarea",
+        "description": "Jovi长文本组件示例",
+        "component": "index",
+        "path": "/jovi/component-textarea",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
       }
     }
   }
