--- a/src/manifest.json
+++ b/src/manifest.json
@@ -313,6 +313,44 @@
           "vivo"
         ]
       },
+      "jovi/component-picture-b": {
+        "name": "jovi主页/component-picture-b",
+        "description": "jovi主页运营图组件",
+        "component": "index",
+        "path": "/jovi/component-picture-b",
+        "features": [
+          {
+            "name": "system.router"
+          },
+          {
+            "name": "system.hostconnection"
+          },
+          {
+            "name": "system.fetch"
+          },
+          {
+            "name":"system.network"
+          },
+          {
+            "name":"system.storage"
+          }
+        ],
+        "params": {
+          "title": "noTitle",
+          "height": "20%",
+          "enableFold": "false",
+          "refreshDuration":3,
+          "refreshDurationInWifi":3,
+          "cardType": 5,
+          "distributeType": 2,
+          "service_id": "",
+          "param_keys": []
+        },
+        "minPlatformVersion": 1050,
+        "targetManufactorys": [
+          "vivo"
+        ]
+      },
       "jovi/component-list-item-a": {
         "name": "jovi主页/component-list-item-a",
         "description": "jovi主页列表组件A",
